--- a/Project/Website Code/styles/stilo.css
+++ b/Project/Website Code/styles/stilo.css
@@ -2,6 +2,12 @@ html {
     background-color: #f2f2f2;
 }
 
+.navbar-custom a {
+    color: white;
+}
+
+
+
 div.fixed {
     position: fixed;
     top:-100px;
@@ -69,4 +75,16 @@ body {
 .cart_qty {
     text-align: right;
     width: 8em;
+}
+
+.navbar-default {
+    background-color: #F8F8F8;
+    border-color: #E7E7E7;
+}
+.navbar-default .navbar-nav > li > a {
+    color: #777777;
+}
+.navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
+    background-color: #E7E7E7;
+    color: #555555;
 }
